--- a/EduTune/Intro/Base.lproj/Main.storyboard
+++ b/EduTune/Intro/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="beU-Ad-Zol">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="FRY-Bc-vVE">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -42,10 +42,10 @@
             </objects>
             <point key="canvasLocation" x="1111" y="1167"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Tab BarVC-->
         <scene sceneID="A5e-pV-kEK">
             <objects>
-                <tabBarController id="beU-Ad-Zol" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="TabBarVC" id="beU-Ad-Zol" customClass="TabBarVC" customModule="EduTune" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="m8v-xe-C55">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -62,7 +62,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ffu-7p-Eh8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1560" y="35"/>
+            <point key="canvasLocation" x="2489.2307692307691" y="34.834123222748815"/>
         </scene>
         <!--Study-->
         <scene sceneID="D8f-ro-qca">
@@ -121,7 +121,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="h6Y-n7-rnp">
-                                <rect key="frame" x="0.0" y="0.0" width="390" height="680"/>
+                                <rect key="frame" x="0.0" y="47" width="390" height="633"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="pIN-Ie-wFz">
                                     <size key="itemSize" width="391" height="551"/>
@@ -131,22 +131,22 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="IntroCVCell" id="ZvT-rL-eWP" customClass="IntroCVCell" customModule="EduTune" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="64.666666666666671" width="391" height="551"/>
+                                        <rect key="frame" x="0.0" y="41" width="391" height="551"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="OVr-Xa-iTQ">
                                             <rect key="frame" x="0.0" y="0.0" width="391" height="551"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_onboarding_bg" translatesAutoresizingMaskIntoConstraints="NO" id="EoG-gv-cmt">
-                                                    <rect key="frame" x="0.0" y="0.0" width="391" height="357"/>
+                                                    <rect key="frame" x="16" y="0.0" width="359" height="367"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </imageView>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dga-r3-eRw">
-                                                    <rect key="frame" x="16" y="16" width="359" height="341"/>
+                                                    <rect key="frame" x="32" y="16" width="327" height="351"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="We provide the best learning courses &amp; great mentors!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="82c-3j-E0R">
-                                                    <rect key="frame" x="16" y="407" width="359" height="144"/>
+                                                    <rect key="frame" x="16" y="387" width="359" height="144"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="144" id="gcx-zd-GA6"/>
                                                     </constraints>
@@ -156,17 +156,17 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="82c-3j-E0R" firstAttribute="top" secondItem="EoG-gv-cmt" secondAttribute="bottom" constant="50" id="Cj4-DU-ylp"/>
+                                                <constraint firstItem="82c-3j-E0R" firstAttribute="top" secondItem="EoG-gv-cmt" secondAttribute="bottom" constant="20" id="Cj4-DU-ylp"/>
                                                 <constraint firstItem="dga-r3-eRw" firstAttribute="trailing" secondItem="EoG-gv-cmt" secondAttribute="trailing" constant="-16" id="EPG-0J-2sg"/>
-                                                <constraint firstItem="EoG-gv-cmt" firstAttribute="leading" secondItem="OVr-Xa-iTQ" secondAttribute="leading" id="Eir-A7-wUt"/>
+                                                <constraint firstItem="EoG-gv-cmt" firstAttribute="leading" secondItem="OVr-Xa-iTQ" secondAttribute="leading" constant="16" id="Eir-A7-wUt"/>
                                                 <constraint firstItem="dga-r3-eRw" firstAttribute="bottom" secondItem="EoG-gv-cmt" secondAttribute="bottom" id="Qmi-yu-2Af"/>
                                                 <constraint firstItem="dga-r3-eRw" firstAttribute="top" secondItem="EoG-gv-cmt" secondAttribute="top" constant="16" id="VjZ-s9-5DN"/>
-                                                <constraint firstAttribute="trailing" secondItem="EoG-gv-cmt" secondAttribute="trailing" id="bXW-gv-Obb"/>
+                                                <constraint firstAttribute="trailing" secondItem="EoG-gv-cmt" secondAttribute="trailing" constant="16" id="bXW-gv-Obb"/>
                                                 <constraint firstItem="dga-r3-eRw" firstAttribute="leading" secondItem="EoG-gv-cmt" secondAttribute="leading" constant="16" id="blm-4r-K1r"/>
                                                 <constraint firstItem="EoG-gv-cmt" firstAttribute="top" secondItem="OVr-Xa-iTQ" secondAttribute="top" id="gWG-nh-sGF"/>
                                                 <constraint firstItem="82c-3j-E0R" firstAttribute="leading" secondItem="OVr-Xa-iTQ" secondAttribute="leading" constant="16" id="jIQ-Ar-jC1"/>
                                                 <constraint firstAttribute="trailing" secondItem="82c-3j-E0R" secondAttribute="trailing" constant="16" id="m3A-S8-6n6"/>
-                                                <constraint firstAttribute="bottom" secondItem="82c-3j-E0R" secondAttribute="bottom" id="oSv-wi-DMG"/>
+                                                <constraint firstAttribute="bottom" secondItem="82c-3j-E0R" secondAttribute="bottom" constant="20" id="oSv-wi-DMG"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="391" height="551"/>
@@ -190,7 +190,7 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Urbanist-Bold" family="Urbanist" pointSize="16"/>
                                 <inset key="contentEdgeInsets" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
-                                <state key="normal" title="Get started">
+                                <state key="normal" title="Next">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
@@ -207,10 +207,10 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="gyw-wU-ej6" firstAttribute="trailing" secondItem="B8B-yk-Lzq" secondAttribute="trailing" constant="16" id="C1O-TU-nil"/>
+                            <constraint firstItem="h6Y-n7-rnp" firstAttribute="top" secondItem="gyw-wU-ej6" secondAttribute="top" id="CwD-jw-uO2"/>
                             <constraint firstItem="B8B-yk-Lzq" firstAttribute="leading" secondItem="gyw-wU-ej6" secondAttribute="leading" constant="16" id="KAm-HA-UkI"/>
                             <constraint firstItem="AoR-qv-PBg" firstAttribute="top" secondItem="h6Y-n7-rnp" secondAttribute="bottom" id="LrJ-a7-QmE"/>
                             <constraint firstItem="AoR-qv-PBg" firstAttribute="centerX" secondItem="5eR-Qe-6Jo" secondAttribute="centerX" id="MKo-NX-M6O"/>
-                            <constraint firstItem="h6Y-n7-rnp" firstAttribute="top" secondItem="5eR-Qe-6Jo" secondAttribute="top" id="RBP-K2-HZg"/>
                             <constraint firstItem="gyw-wU-ej6" firstAttribute="trailing" secondItem="h6Y-n7-rnp" secondAttribute="trailing" id="ULd-3s-eVV"/>
                             <constraint firstItem="gyw-wU-ej6" firstAttribute="bottom" secondItem="B8B-yk-Lzq" secondAttribute="bottom" constant="16" id="aLJ-Ir-L4y"/>
                             <constraint firstItem="h6Y-n7-rnp" firstAttribute="leading" secondItem="gyw-wU-ej6" secondAttribute="leading" id="m7T-mk-6Fy"/>
@@ -221,21 +221,22 @@
                     <connections>
                         <outlet property="bottomCns" destination="aLJ-Ir-L4y" id="QUM-Vm-LBT"/>
                         <outlet property="collectionView" destination="h6Y-n7-rnp" id="9xK-ug-w3J"/>
+                        <outlet property="nextButton" destination="B8B-yk-Lzq" id="ftr-Ti-lFy"/>
                         <outlet property="pagecontrol" destination="AoR-qv-PBg" id="Cc7-3t-9ji"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QOV-ql-5q0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="874" y="35"/>
+            <point key="canvasLocation" x="1803.0769230769231" y="34.834123222748815"/>
         </scene>
         <!--Home-->
         <scene sceneID="hc9-kZ-8ke">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="AD6-4g-gG5" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="AD6-4g-gG5" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Home" image="ic_tab_home" selectedImage="ic_tab_home_selected" id="zef-K4-XWR"/>
                     <toolbarItems/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="4dT-SR-Xg1">
-                        <rect key="frame" x="0.0" y="47" width="390" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -247,8 +248,41 @@
             </objects>
             <point key="canvasLocation" x="1111" y="771"/>
         </scene>
+        <!--SplashVC-->
+        <scene sceneID="I9B-JF-RjU">
+            <objects>
+                <viewController id="FRY-Bc-vVE" customClass="SplashVC" customModule="EduTune" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="puf-SJ-dnE">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_logo" translatesAutoresizingMaskIntoConstraints="NO" id="KMl-Mv-6sj">
+                                <rect key="frame" x="125" y="352" width="140" height="140"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="140" id="TEn-ui-ihf"/>
+                                    <constraint firstAttribute="width" constant="140" id="tnj-DL-tni"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="nnG-p1-cUZ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="KMl-Mv-6sj" firstAttribute="centerY" secondItem="puf-SJ-dnE" secondAttribute="centerY" id="RDZ-Uc-lR0"/>
+                            <constraint firstItem="KMl-Mv-6sj" firstAttribute="centerX" secondItem="puf-SJ-dnE" secondAttribute="centerX" id="az3-Vd-ssH"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Nqw-WS-6Sq"/>
+                    <connections>
+                        <outlet property="imageView" destination="KMl-Mv-6sj" id="rxU-nu-Jif"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="y32-Ed-shR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1106.1538461538462" y="34.834123222748815"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="ic_logo" width="280" height="280"/>
         <image name="ic_tab_chat" width="24.333333969116211" height="24"/>
         <image name="ic_tab_chat_selected" width="24.333333969116211" height="24"/>
         <image name="ic_tab_home" width="24.333333969116211" height="24"/>
